--- a/nextjs0001/app/html/homepage.html
+++ b/nextjs0001/app/html/homepage.html
@@ -8,7 +8,7 @@
           <button
             className="bg-blue-400 text-white border p-1 px-4 rounded mr-3"
           >
-            Sign in
+            Sign in..
           </button>
           <button className="border p-1 px-4 rounded">Sign up</button>
         </div>
